Prevent scrollbar

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -5,6 +5,7 @@ body {
   justify-items: center;
   justify-content: center;
   height: 100vh;
+  margin: 0;
 }
 
 img {
